# llm-capability-runner

./: .gitignore  DEVELOPMENT.md  EDGE_LIGHT_REMAKE.md  README.md  REPO_STATUS.md
Android/src/: build.gradle.kts  icon.py  settings.gradle.kts
Android/src/app/: build.gradle.kts
Android/src/ggufruntime/: UPSTREAM.md  build.gradle.kts
Android/src/ggufruntime/src/main/cpp/: CMakeLists.txt  gguf_bridge.cpp
Android/src/ggufruntime/src/main/java/com/arm/aichat/internal/: InferenceEngineImpl.kt
Android/src/gradle/: libs.versions.toml
Android/src/lightapp/: build.gradle.kts  proguard-rules.pro
Android/src/lightapp/src/main/: AndroidManifest.xml
Android/src/lightapp/src/main/assets/skills/make-new-skill/: SKILL.md
Android/src/lightapp/src/main/assets/skills/private-document-analyst/: SKILL.md
Android/src/lightapp/src/main/assets/skills/skill-architect/: SKILL.md
Android/src/lightapp/src/main/assets/skills/structured-code-review/: SKILL.md
Android/src/lightapp/src/main/assets/skills/visual-inspection/: SKILL.md
Android/src/lightapp/src/main/res/drawable/: edge_light_launcher_foreground.xml
Android/src/lightapp/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
Android/src/lightapp/src/main/res/values/: styles.xml
archive/legacy-ui/: ReceiptsUi.kt
docs/: LCR_CAPABILITY_MENU.md  LCR_CONVERSATION_LEDGER.md  LCR_FULL_REPLAY_EXPORT.md  LCR_MEMORY_HYDRATION.md  LCR_MODEL_LIBRARY.md  LCR_PLATFORM_SEAMS.md  LCR_REDACTION_POLICY.md  LCR_REPLAY_HARNESS.md  LCR_WORKFLOW_RUNNER_FUTURE.md
(+69 files in other folders)
